docs/examples/certificate/http/ing-tls.yaml
apiVersion: voyager.appscode.com/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  namespace: default
spec:
  tls:
  - hosts:
    - kiteci.com
    ref:
      kind: Secret
      name: tls-kitecicom
  rules:
  - host: kiteci.com
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: 80
        path: /
